syntax = "proto3";

package snapshotservice.pb;

option go_package = "github.com/plgd-dev/hub/v2/snapshot-service/pb;pb";

import "resource-aggregate/pb/events.proto";

message GetSnapshotStatusesRequest {
    repeated string snapshot_id_filter = 1;
    repeated string device_id_filter = 2;
}

message SnapshotResourceStatus {
    string href = 1;
}

message SnapshotStatus {
    string id = 1;
    string version = 2;
    string device_id = 3; // don't update device again
    flags // enforce always, once, on snapshot change
    string snapshot_id = 4;
    string association_snapshot_id = 5;
    int64 timestamp_start = 6;
    int64 timestamp_end = 7;
    int64 valid_until = 8;
    repeated resourceaggregate.pb.ResourceUpdated resourcesUpdated = 9;
}

message DeleteSnapshotStatusesRequest {
    repeated string id_filter = 1;
}

message DeleteSnapshotStatusesResponse {
    int64 count = 1;
}